--- a/.github/workflows/generate-full-html.yml
+++ b/.github/workflows/generate-full-html.yml
@@ -12,4 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run Script
-      - run: ./scripts/generate-single-file.sh
+        run: ./scripts/generate-single-file.sh
